fixed spacing

--- a/client/src/screens/details/Details.css
+++ b/client/src/screens/details/Details.css
@@ -23,7 +23,7 @@
 
 .details-notes-container {
   grid-area: N;
-  width: 30vw;
+  width: 27vw;
   height: 70vh;
   border-left: 1px solid white;
   border-bottom: 1px solid white;
